--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- my CSS -->
     <link rel="stylesheet" href="login.css">
     
-    <title>Trelei</title>
+    <title>Trellei</title>
     
   </head>
   <body onload="verificaSessaoAberta()">
