--- a/user/mainpage.html
+++ b/user/mainpage.html
@@ -46,7 +46,7 @@
 
       <div class="container-fluid position-fixed overflow-auto" id="divUserHome">
 
-        <div id="novoQuadrobg" class="row position-absolute align-items-center">
+        <div id="novoQuadrobg" class="row position-absolute justify-content-center align-items-start">
           <div id="novoQuadro" class="col col-12 col-sm-8 col-md-6 col-lg-5 col-xl-4">
             <button type="button" id="btnCloseNovoQuadro" class="close mb-1 ml-1 text-white">
               <span aria-hidden="true">&times;</span>
@@ -54,7 +54,7 @@
             <form id="formNovoQuadro" class="my-2">
               <div id="quadroANDcores">
                 <div id="bgQuadro">
-                  <input type="text" class="form-control" placeholder="Insira o nome do quadro" maxlength="25" id="nomeDoQuadro"/>
+                  <input type="text" class="form-control" placeholder="Nome do Quadro" maxlength="25" required id="nomeDoQuadro"/>
                 </div>
                 <ul id="listaDeCores" class="row">
                   <li class="col col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3"><button type="button" onclick="mudarCor(this)"
@@ -77,7 +77,7 @@
                       id="btnCorCinza" title="cinza"></button></li>
                 </ul>
               </div>
-              <input type="submit" id="btnCriarQuadro" value="Criar Quadro" class="form-control" disabled/>
+              <input type="submit" id="btnCriarQuadro" value="Criar Quadro" class="form-control"/>
             </form>
           </div>
         </div>
@@ -90,8 +90,8 @@
             <ul class="row list-group list-group-horizontal px-3" id="listaQuadros">
 
               <li class="col col-6 col-sm-4 col-md-4 col-lg-4 col-xl-3 list-group-item">
-                <div class="quadro" id="criarQuadro">
-                  <span>Criar novo quadro</span>
+                <div class="quadro px-2" id="criarQuadro">
+                  <span>+ Criar novo quadro</span>
                 </div>
               </li>
             </ul>
