hide/show usando clases. E cor do quadro

--- a/user/mainpage.html
+++ b/user/mainpage.html
@@ -12,7 +12,7 @@
   <!-- my CSS -->
   <link rel="stylesheet" href="mainpage.css">
 
-  <title>Home | Trellei </title>
+  <title>Home | Trellei</title>
 </head>
 
 <body onload="verificaSessao()">
@@ -46,7 +46,7 @@
 
       <div class="container-fluid position-fixed overflow-auto" id="divUserHome">
 
-        <div id="novoQuadrobg" class="row position-absolute justify-content-center align-items-start">
+        <div id="novoQuadrobg" class="row display-none position-absolute justify-content-center align-items-start">
           <div id="novoQuadro" class="col col-12 col-sm-8 col-md-6 col-lg-5 col-xl-4">
             <button type="button" id="btnCloseNovoQuadro" class="close mb-1 ml-1 text-white">
               <span aria-hidden="true">&times;</span>
