--- a/board/board.html
+++ b/board/board.html
@@ -49,45 +49,47 @@
             <div id="divBoardName">
               <span id="spanName"></span>
               <span class="form-control" id="spanSize"></span>
-              <input class="form-control" type="search" id="inputNomeQuadro" maxlength="50" />
+              <input class="form-control display-none" id="inputNomeQuadro" maxlength="50" />
 
             </div>
             <div id="divMenuBoard">
               <div class="dropdown">
                 <button class="btn" data-toggle="dropdown" id="btnMudarCor">Mudar Cor</button>
                 <div class="dropdown-menu dropdown-menu-left">
-                  <ul class="row dropdown-item p-0 justify-content-center list-group list-group-horizontal">
-                    <li class=" col-3 d-inline-block m-1 p-0 bg-primary">
-                      Cor 1
+                  <ul class="row p-0 justify-content-center list-group list-group-horizontal">
+                    <li class="col-3 d-inline-block m-1 p-0">
+                      <button class="btn btn-colors" onclick="changeColor(this)" style="background-color: rgb(0, 121, 191);"></button>
                     </li>
-                    <li class="col-3 d-inline-block m-1 p-0 bg-success">
-                      Cor 2
+                    <li class="col-3 d-inline-block m-1 p-0" >
+                      <button class="btn btn-colors" onclick="changeColor(this)" style="background-color: rgb(210, 136, 52);"></button>
                     </li>
-                    <li class="col-3 d-inline-block m-1 p-0 bg-warning">
-                      Cor 3
+                    <li class="col-3 d-inline-block m-1 p-0 ">
+                      <button class="btn btn-colors" onclick="changeColor(this)"  style="background-color: rgb(81, 152, 57);"></button>
                     </li>
-                    <li class="col-3 d-inline-block m-1 p-0 bg-secondary">
-                      Cor 4
+                    <li class="col-3 d-inline-block m-1 p-0 " >
+                      <button class="btn btn-colors" onclick="changeColor(this)" style="background-color: rgb(176, 70, 50);"></button>
                     </li>
-                    <li class="col-3 d-inline-block m-1 p-0 bg-danger">
-                      Cor 5
+                    <li class="col-3 d-inline-block m-1 p-0 ">
+                      <button class="btn btn-colors" onclick="changeColor(this)" style="background-color: rgb(137, 96, 158);"></button>
                     </li>
-                    <li class="col-3 d-inline-block m-1 p-0 bg-info">
-                      Cor 6
+                    <li class="col-3 d-inline-block m-1 p-0 " >
+                      <button class="btn btn-colors" onclick="changeColor(this)" style="background-color: rgb(205, 90, 145);"></button>
                     </li>
-                    <li class="col-3 d-inline-block m-1 p-0 bg-dark">
-                      Cor 7
+                    <li class="col-3 d-inline-block m-1 p-0 " >
+                      <button class="btn btn-colors" onclick="changeColor(this)" style="background-color: rgb(75, 191, 107);"></button>
                     </li>
-                    <li class="col-3 d-inline-block m-1 p-0 bg-success">
-                      Cor 8
+                    <li class="col-3 d-inline-block m-1 p-0 " >
+                      <button class="btn btn-colors " onclick="changeColor(this)" style="background-color: rgb(0, 174, 204);"></button>
                     </li>
-                    <li class="col-3 d-inline-block m-1 p-0 bg-primary">
-                      Cor 9
+                    <li class="col-3 d-inline-block m-1 p-0 ">
+                      <button class="btn btn-colors" onclick="changeColor(this)" style="background-color: rgb(131, 140, 145);"></button>
                     </li>
                   </ul>
                 </div>
               </div>
-              <button class="btn" id="btnApagarQuadro">Apagar Quadro</button>
+              <div>
+                <button class="btn" id="btnApagarQuadro">Apagar Quadro</button>
+              </div>
             </div>
           </div> <!-- Col -->
 
@@ -97,7 +99,7 @@
           <div class="col col-12 p-2">
             <ul class="row list-group list-group-horizontal justify-content-center justify-content-md-start justify-content-lg-start justify-content-xl-start" id="allListas">
 
-              <li class="col col col-11 col-sm-5 col-md-3 col-lg-2 col-xl-2 text-nao-selecionavel" id="liCriarLista" onclick="hideMe('spanAddLista')" data-toggle="collapse" href="#divFormLista">
+              <li class="col col col-11 col-sm-5 col-md-3 col-lg-2 col-xl-2 text-nao-selecionavel" id="liCriarLista" onclick="hideOrShow('spanAddLista', 'none')" data-toggle="collapse" href="#divFormLista">
                 <div class="card" id="cardAddList">
                   <span id="spanAddLista">+ Adicionar Lista</span>
                   <div class="collapse" id="divFormLista" onclick="event.stopPropagation()">
