some bugs fixeds

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <div class="form-group">
               <label>Senha</label>
-              <input type="password" class="form-control" id="senhaLogin" placeholder="Digite a senha" required minlength="4">
+              <input type="password" class="form-control" id="senhaLogin" placeholder="Digite a senha" required>
             </div>
             <div class="custom-control custom-checkbox checkbox-lg">
                 <input type="checkbox" class="custom-control-input" id="manterConectado">
@@ -69,17 +69,14 @@
             <div class="form-group">
               <label>Nome</label>
               <input type="text" class="form-control" id="nomeCadastro" placeholder="Digite seu nome" required>
-              <div class="invalid-feedback">Por favor preencha este campo.</div>
             </div>
             <div class="form-group">
               <label>Usuário</label>
               <input type="text" class="form-control" id="usernameCadastro" placeholder="Digite seu nome de usuario" required>
-              <div class="invalid-feedback">Por favor preencha este campo.</div>
             </div>
             <div class="form-group">
               <label>Senha</label>
-              <input type="password" class="form-control" id="senhaCadastro" placeholder="Digite sua senha" required minlength="4">
-              <div class="invalid-feedback">Por favor preencha este campo.</div>
+              <input type="password" class="form-control" id="senhaCadastro" placeholder="Digite sua senha" required>
             </div>
             <button type="submit" class="btn btn-primary">Cadastrar</button>
             </form> 
