--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Trellei</title>
     
   </head>
-  <body onload="verificaSessaoAberta()">
+  <body>
     <div class="container">
       <div class="row justify-content-md-center" id="divGridLayout">
         <!-- Alerts -->
