--- a/user/mainpage.html
+++ b/user/mainpage.html
@@ -16,7 +16,7 @@
   <title>Home | Trellei</title>
 </head>
 
-<body onload="verificaSessao()">
+<body>
   <div id="background" class="bg-primary">
     <div class="container-fluid bg-transparent" id="mainContainer">
       <div class="navbar">
