--- a/board/board.html
+++ b/board/board.html
@@ -176,13 +176,13 @@
           <div class="h5">Tags</div>
           <ul class="list-group list-group-horizontal mb-3">
             <li class=" d-inline-block m-1 p-0">
-              <button class="btn btn-tags" style="background-color: rgb(0, 121, 191);"></button>
+              <button class="btn btn-tags bg-info"></button>
             </li>
             <li class=" d-inline-block m-1 p-0">
-              <button class="btn btn-tags" style="background-color: rgb(210, 136, 52);"></button>
+              <button class="btn btn-tags bg-warning"></button>
             </li>
-            <li class=" d-inline-block m-1 p-0 ">
-              <button class="btn btn-tags" style="background-color: rgb(81, 152, 57);"></button>
+            <li class=" d-inline-block m-1 p-0">
+              <button class="btn btn-tags bg-success"></button>
             </li>
             <li class=" d-inline-block m-1 p-0 ">
               <div class="dropdown">
@@ -192,10 +192,10 @@
                   <div class="dropdown-menu dropdown-menu-left">
                     <ul class="dropdown-item list-group list-group-horizontal px-2">
                       <li class="d-inline-block m-1 p-0">
-                        <button class="btn btn-tags" style="background-color: #b8daff;"></button>
+                        <button class="btn btn-tags bg-info"></button>
                       </li>
                       <li class="d-inline-block m-1 p-0">
-                          <button class="btn btn-tags" style="background-color: #c3e6cb;"></button>
+                          <button class="btn btn-tags bg-success"></button>
                       </li>
                       <li class="d-inline-block m-1 p-0">
                           <button class="btn btn-tags bg-warning"></button>
@@ -221,12 +221,20 @@
           </ul>
           <h6 id="resizeTextComent"></h6>
           <textarea class="mb-2" id="textComent" placeholder="Escrever um comentário"></textarea>
-          <form id="formDadosCard">
-            <div class="form-group">
-              <h6>Mudar data do cartão</h6>
-              <input class="form-control" type="date" id="dataCard" min="2000-01-01" required>
-            </div>
-          </form>
+            <form id="formDadosCard">
+              <div class="form-group w-25">
+                <h6>Mudar Data do Cartão</h6>
+                <input class="form-control" type="date" id="dataCard" min="2000-01-01" required>
+              </div>
+              <div class="form-group w-25">
+                <h6>Mudar o Cartão para lista:</h6>
+                <select class="form-control" id="selectListas">
+                  <option value="1">1 (lista atual)</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                </select>
+              </div>
+            </form>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-primary" data-dismiss="modal">Save changes</button>
